# serial_port_logger

./: CMakeLists.txt  README.md
acceptance_tests/: CMakeLists.txt  config.h.in  main.cpp  pch.h  serial_port_logger_tests.cpp
async_io/: CMakeLists.txt  Serial_port_config_file_parser.cpp  Serial_port_config_file_parser_exception.cpp  Serial_port_session_exception.cpp  pch.h
data/: HMR3000_data.txt
gps_compass_logger/: ExitIfProcessIsRunning.py  GpsCompassLogger.py  LedUserInterface.py  compass_log_file.txt  config.json  gps_log_file.txt  gps_parser.py  main.py
include/async_io/: Async_procrastinator.h  Boost_async_IO_read_utils.h  Boost_serial_port_factory.h  Boost_serial_port_options.h  Boost_signal_set_factory.h  Boost_timer_factory.h  Serial_port_connection.h  Serial_port_session.h  Serial_port_session_exception.h  Serial_port_session_factory.h  Signals_handler.h
include/serial_port_logger/: File_ostream.h  Log_type.h  Serial_port_config.h  Serial_port_config_file_parser.h  Serial_port_config_file_parser_exception.h  Serial_port_logger.h  Serial_port_logger_dependency_injector.h  Syncronization_time_updater.h
include/test/: FS_utils.h  Logger.h  Mock_IO_context.h  Mock_IO_object.h  Mock_IO_read_utils.h  Mock_I_stream.h  Mock_error_code.h  Mock_error_observer.h  Mock_ostream.h  Mock_read_handler.h  Mock_serial_port.h  Mock_serial_port_factory.h  Mock_serial_port_logger.h  Mock_serial_port_options.h  Mock_serial_port_session.h  Mock_serial_port_session_factory.h  Mock_signal_controller.h  Mock_signal_controller_factory.h  Mock_timer.h  Mock_timer_factory.h  Random_generator.h  Random_serial_port_config_generator.h  Virtual_serial_port.h
integration_tests/: CMakeLists.txt  Serial_port_config_file_parser_tests.cpp  main.cpp  pch.h
serial_port_logger/: Application.cpp  Application.h  CMakeLists.txt  main.cpp  pch.h
unit_tests/: Async_procrastinator_tests.cpp  CMakeLists.txt  README.md  Serial_port_connection_tests.cpp  Serial_port_session_tests.cpp  Signals_handler_tests.cpp  Syncronization_time_updater_tests.cpp  main.cpp  pch.h
